--- a/gradle/applyPlugins.gradle
+++ b/gradle/applyPlugins.gradle
@@ -3,6 +3,7 @@ apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.asciidoctor.convert'
+apply plugin: "net.ltgt.apt"
 
 group = 'io.github.xcloudschool'
 version = 'Baby.M1'
